--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "eris": "^0.10.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "gists": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
